[package]
name = "image-cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-multipart = "0.4.0"
md5 = "0.7.0"
uuid = { version = "0.8", features = ["v4"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls"] }
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
sanitize-filename = "0.3"
